# coco-8

./: .gitignore  Cargo.toml  LOG.md  README.md  build.sh  deploy.sh  index.js
.github/workflows/: deploy.yml
coco-core/: Cargo.toml  README.md
coco-core/src/: lib.rs  opcodes.rs  stack.rs
coco-ui/: Cargo.toml  index.html  index.js  styles.css
coco-ui/roms/: deo_system_debug.rom  pacman.tal  pixel_fill.tal  put_pixel.rom  put_pixel.tal  sprite.tal  sprite_move.rom
coco-ui/src/: lib.rs
coco-vm/: Cargo.toml  README.md
coco-vm/src/: lib.rs  system.rs  video.rs
coco-vm/tests/: vm_cpu_test.rs
docs/: architecture.md
roms/: pacman.rom  pixel_fill.rom  sprite.rom  sprite.tal  sprite_move.tal
